manifests/05_sample-application/06_service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  ports:
    - port: 443
      name: https-grafana
      protocol: TCP
      targetPort: https-grafana
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
