manifests/05_sample-application/07_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: grafana-ingress
  namespace: grafana
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - # See parameters.yml
      secretName: grafana-tls
  rules:
    - host: # See parameters.yml
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 443
            pathType: ImplementationSpecific
